dev/promotion/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: promotion
  namespace: yas-dev
  labels:
    app: promotion
spec:
  replicas: 1
  selector:
    matchLabels:
      app: promotion
  template:
    metadata:
      labels:
        app: promotion
    spec:
      containers:
      - name: promotion
        image: ghcr.io/nashtech-garage/yas-promotion:latest
        ports:
        - containerPort: 80
        resources:
          requests:
            memory: 256Mi
            cpu: 100m
          limits:
            memory: 512Mi
            cpu: 500m
