dev/promotion/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: promotion
  namespace: yas-dev
  labels:
    app: promotion
spec:
  type: ClusterIP
  selector:
    app: promotion
  ports:
  - port: 80
    targetPort: 80
