dev/promotion/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: promotion
  namespace: yas-dev
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: api.yas.local.com
    http:
      paths:
      - path: /promotion
        pathType: ImplementationSpecific
        backend:
          service:
            name: promotion
            port:
              number: 80
